# bbts

./: .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  Makefile  WORKSPACE  cmake_install.cmake  gpu_profiler.pb.cc  gpu_profiler.pb.h  gpu_with_exp.cpp
applications/: Applications.cmake  ib.cc
applications/bmm/: BUILD  generate_bmm.cc
applications/cpmm/: BUILD  generate_cpmm.cc
applications/diff_mm/: CMakeLists.txt  diff_mm_kernel.cc  diff_mm_kernel.h  diff_mm_lib_init.cc  generate_diff_mm.cc
applications/ffnn/: BUILD  CMakeLists.txt  ffnn_activation_mult.cc  ffnn_activation_mult.h  ffnn_add.cc  ffnn_add.h  ffnn_back_mult.cc  ffnn_back_mult.h  ffnn_diff_mm_kernel.cc  ffnn_diff_mm_kernel.h  ffnn_lib_init.cc  ffnn_matrix_hadamard.cc  ffnn_matrix_hadamard.h  ffnn_mult.cc  ffnn_types.cc  ffnn_types.h  ffnn_uniform_data.cc  ffnn_uniform_data.h  ffnn_uniform_sparse_data.cc  ffnn_uniform_sparse_data.h  ffnn_uniform_weights.cc  ffnn_weighted_sum.cc  ffnn_weighted_sum.h  ffnn_weighted_sum_sparse_dense.cc  ffnn_weighted_sum_sparse_dense.h  generate_diff_ffnn.cc  generate_ffnn.cc
applications/ffnn-gpu/: CMakeLists.txt  ffnn_activation_mult.cu  ffnn_activation_mult.h  ffnn_add.cu  ffnn_add.h  ffnn_back_mult.cu  ffnn_back_mult.h  ffnn_diff_mm_kernel.cu  ffnn_lib_init.cc  ffnn_matrix_hadamard.cu  ffnn_matrix_hadamard.h  ffnn_mult.cc  ffnn_mult.h  ffnn_types.h  ffnn_uniform_data.cc  ffnn_uniform_sparse_data.cc  ffnn_uniform_sparse_data.h  ffnn_uniform_weights.cc  ffnn_uniform_weights.h  ffnn_weighted_sum.cu  ffnn_weighted_sum.h  ffnn_weighted_sum_sparse_dense.cc  ffnn_weighted_sum_sparse_dense.h  generate_ffnn.cc
applications/generate_test_touch/: CMakeLists.txt  generate_test_touch.cc
applications/gpu_bench/: CMakeLists.txt  bench_ffnn.cc  bench_ffnn_diff.cc  bench_matrix_mutiply.cc  bench_mm_chain.cc  mm_util.cc  mm_util.h
applications/ib/: CMakeLists.txt  ib.cc
applications/mm_single_node/: BUILD  generate_single_node_mm.cc
applications/multiplication_chain/: BUILD  generate_multiplication_chain.cc
applications/node/: BUILD  node_cli.cc
applications/stack/: CMakeLists.txt  test_stack.cc
applications/web_interface/: CMakeLists.txt  run_web.cc
applications/xla_kernel/: BUILD  main.cc  xla_kernel.cc  xla_kernel.h  xla_kernel_base.cc  xla_kernel_base.h  xla_lib_init.cc  xla_test_kernel.cc  xla_test_kernel.h  xla_types.cc  xla_types.h
integration_tests/: test_broadcast.cc  test_move.cc  test_reduce.cc  test_simulated_bmm.cc  test_simulated_cmm.cc
lldb-test/llvm-build/: CMakeCache.txt
main/: BUILD
main/commands/: BUILD  command_notifier.h  command_runner.cc  command_runner.h  reorder_buffer.cc  reorder_buffer.h  reservation_station.cc  reservation_station.h
main/communication/: BUILD  communicator.cc  communicator.h
main/gpu/: gpu_heuristic.cc  gpu_memory.cc  gpu_profiler.cc  gpu_profiler.h  gpu_profiler.proto  scheduler.cc  scheduler.h  types.h
main/operations/: BUILD  partial_reduce_op.cc  partial_reduce_op.h  reduce_op.cc  reduce_op.h
main/server/: BUILD  coordinator.cc  node.cc  node_config.h
main/storage/: BUILD  memory_storage.cc  nvme_storage.cc  nvme_storage.h  storage.h
main/tensor/: BUILD  builtin_formats.cc  tensor.h  tensor_factory.cc  xla_types.cc  xla_types.h
main/ud_functions/: BUILD  builtin_functions.h  gpu_scheduler.h  null_gpu_scheduler.h  ud_function.h  udf_manager.cc  udf_manager.h  xla_kernel_base.cc  xla_kernel_base.h
main/utils/: BUILD
src/commands/: abstract_command.h  command.h  command_handler.h  command_handler_apply.cc  command_handler_apply.h  command_handler_delete.cc  command_handler_delete.h  command_handler_move.cc  command_handler_move.h  command_handler_reduce.cc  command_handler_reduce.h  command_notifier.cc  command_notifier.h  command_runner.cc  command_runner.h  heuristic.cc  heuristic.h  reduce_notifier.cc  reduce_notifier.h  reorder_buffer.cc  reorder_buffer.h  reservation_station.cc  reservation_station.h  two_layer_compiler.h
src/communication/: communicator.cc  communicator.h  ib_communicator.cc  ib_communicator.h  mpi_communicator.cc  mpi_communicator.h
src/gpu/: early_scheduler.h  goodness_heuristic.h  gpu_heuristic.cc  gpu_heuristic.h  gpu_memory.cc  gpu_memory.h  gpu_memory_pool.h  gpu_memory_pool_expectation.h  gpu_profiler.cc  gpu_profiler.h  gpu_profiler.proto  scheduler.cc  scheduler.h  types.cc  types.h
src/operations/: broadcast_op.cc  local_reduce_op.cc  local_stack_op.cc  local_stack_op.h  move_op.cc  partial_reduce_op.cc  partial_reduce_op.h  reduce_op.cc
src/server/: coordinator.cc  coordinator.h  coordinator_ops.h  node.cc  node.h  node_config.h
src/storage/: block_allocator.h  block_allocator_expectation.h  memory_storage.cc  memory_storage.h  nvme_storage.cc
src/tensor/: builtin_formats.cc  builtin_formats.h  tensor.h  tensor_factory.cc  tensor_factory.h
src/ud_functions/: ud_function.h  (+4 more)
tests/: Tests.cmake  gpu_bla.cc  test_bench_uds.cc  test_builtin_dense.cc  test_builtin_ud.cc  test_concurent_cublas.cu  test_gpu_allocations.cc  test_gpu_builtin_ud_gpu.cu  test_gpu_concurent_cublas.cu  test_gpu_heuristic.cc  test_gpu_matrix_multiply.cc  test_gpu_memory.cc  test_gpu_multiplies.cc  test_gpu_scheduler.cc  test_kernel.cc  test_parsed_command.cc  test_reorder_buffer.cc  test_reservation_station.cc  test_reservation_station_partial_reduce.cc  test_storage.cc  test_tensor_aligment.cc  test_two_phase_command_compiler.cc
web/: index.html  view_log.html
(+59 files in other folders)
